Work on mobile styling

--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -16,9 +16,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style>
       h1 {
         font-family: 'ArcaMajora3-Bold', sans-serif;
-        font-size: 1.5em;
+        font-size: 1.3em;
         font-weight: normal;
-        letter-spacing: 4px;
+        letter-spacing: 10px;
         color: #FFF;
       }
 
@@ -27,7 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       h1, h2, p {
-        margin: 20px 0;
+        margin: 18px 0;
       }
 
       a {
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .container {
         max-width: 778px;
         margin: 0 auto;
-        padding: 0 24px 48px;
+        padding: 0 8% 48px;
       }
 
       .splash {
@@ -56,6 +56,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         h1 {
           font-size: 1.9em;
           letter-spacing: 28px;
+        }
+
+        h1, h2, p {
+          margin: 20px 0;
         }
 
         .splash {
