--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -55,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .menu-button {
         width: 28px;
         height: 28px;
-        margin: 32px;
+        margin: 24px;
         border: none;
         background: url(data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22%3E%3Cg%3E%3Cpath d=%22M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z%22 fill=%22%23FFFFFF%22%3E%3C/path%3E%3C/g%3E%3C/svg%3E) no-repeat;
       }
@@ -64,9 +64,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         position: absolute;
         top: 0;
         right: 0;
-        width: 52px;
-        height: 52px;
-        margin: 22px;
+        width: 44px;
+        height: 44px;
+        margin: 16px;
       }
       
       .tabs {
@@ -81,13 +81,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         z-index: 12;
 
         --app-drawer-content-container: {
-          background-color: #21292E;
+          background-color: #000;
         }
       }
 
       .close-button {
-        width: 24px;
-        height: 24px;
+        width: 28px;
+        height: 28px;
         margin: 24px;
         border: none;
         background: url(data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22%3E%3Cg%3E%3Cpath d=%22M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z%22 fill=%22%23FFFFFF%22%3E%3C/path%3E%3C/g%3E%3C/svg%3E) no-repeat;
@@ -95,11 +95,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .drawer-links > a {
         display: block;
-        padding: 12px;
-        margin: 12px 24px;
+        margin: 14px 28px 28px;
         font-family: 'ArcaMajora3-Bold', sans-serif;
         font-weight: normal;
         text-transform: uppercase;
+        font-size: 13px;
         letter-spacing: 6px;
       }
       
@@ -108,8 +108,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .drawer-links > a.iron-selected {
-        padding-left: 11px;
-        border-left: 1px solid #FFF;
+        color: #999;
       }
 
       @media (min-width: 768px) {
