--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -30,6 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 60px;
         background-repeat: no-repeat;
         background-position: center bottom;
+        margin-bottom: 32px;
       }
 
       .step > .step-image.step-1 {
@@ -81,7 +82,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .step > .step-image::after {
         position: relative;
-        top: 76px;
+        top: 74px;
         display: block;
         margin: 0 auto;
         content: '';
@@ -89,7 +90,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-top: 1px solid var(--app-accent-color);
       }
 
-      .step > h2 {
+      .step > h2,
+      .step > .description > p {
         text-align: center;
       }
 
@@ -115,6 +117,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           width: 180px;
           height: 100%;
           background-position: center top;
+          margin-bottom: 0;
         }
 
         .step > .step-image::after {
@@ -134,6 +137,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           margin-left: 244px;
           border-left: 1px solid var(--app-accent-color);
           padding-left: 40px;
+        }
+
+        .step > .description > p {
+          text-align: left;
         }
       }
     </style>
