--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="manifest" href="/manifest.json">
 
     <!-- See https://goo.gl/qRE0vM -->
-    <meta name="theme-color" content="#21292E">
+    <meta name="theme-color" content="#212121">
 
     <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <!-- Tile icon for Windows 8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="/images/logos/nasa-144.png">
-    <meta name="msapplication-TileColor" content="#21292E">
+    <meta name="msapplication-TileColor" content="#212121">
     <meta name="msapplication-tap-highlight" content="no">
 
     <script>
@@ -110,7 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       body {
         margin: 0;
         font-family: sans-serif;
-        background: #21292E;
+        background: #212121;
         color: #DDD;
       }
 
