--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         display: block;
 
-        --app-accent-color: #979ca5;
+        --app-accent-color: #C1C6CC;
       }
 
       app-header {
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #21292E;
+        background-color: #212121;
         opacity: 0;
         transition: opacity 0.5s;
       }
@@ -97,9 +97,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         margin: 14px 28px 28px;
         font-family: 'ArcaMajora3-Bold', sans-serif;
-        font-weight: normal;
-        text-transform: uppercase;
         font-size: 13px;
+        text-transform: uppercase;
+        font-weight: normal;
         letter-spacing: 6px;
       }
       
@@ -127,8 +127,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           padding: 14px 0;
           margin: 36px 20px;
           font-family: 'ArcaMajora3-Bold', sans-serif;
-          font-weight: normal;
+          font-size: 13px;
           text-transform: uppercase;
+          font-weight: normal;
           letter-spacing: 6px;
         }
 
@@ -137,7 +138,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           top: 0;
           bottom: 0;
           left: 0;
-          right: 6px;
+          right: 5px;
           content: '';
         }
         
