--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -100,6 +100,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 13px;
       }
 
+      .table-container > table {
+        width: 600px;
+      }
+
       @media (min-width: 768px) {
         :host {
           background-size: 100%;
