--- a/src/code-nasa-guide.html
+++ b/src/code-nasa-guide.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                           linear-gradient(0deg, #323D44, transparent 1300px);
         background-repeat: no-repeat;
         background-position: center top, center bottom;
-        background-size: 200%;
+        background-size: 250%;
         font-size: 16px;
         line-height: 24px;
       }
@@ -107,6 +107,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       @media (min-width: 768px) {
         :host {
           background-size: 100%;
+        }
+
+        .container {
+          max-width: 885px;
         }
 
         .step {
