--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-image: url('/images/backgrounds/share.jpg');
         background-repeat: no-repeat;
         background-position: center top;
-        background-size: 200%;
+        background-size: 250%;
         font-size: 16px;
         line-height: 24px;
       }
@@ -42,18 +42,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           background-size: 100%;
         }
 
+        .container {
+          max-width: 980px;
+        }
+
         .section {
           display: inline-block;
           box-sizing: border-box;
           vertical-align: top;
-          width: 45%;
+          width: 40.5%;
           text-align: left;
           border-left: 1px solid var(--app-accent-color);
           padding-left: 40px;
         }
 
         .section.first {
-          margin-right: 10%;
+          margin-right: 19%;
         }
 
         .section > h2 {
