--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -35,11 +35,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .container {
         max-width: 778px;
         margin: 0 auto;
-        padding: 0 8% 48px;
+        padding: 0 8% 100px;
       }
 
       .splash {
-        padding: 55.5vw 0 40vw;
+        padding: 69vw 0 60vw;
         text-align: center;
         text-transform: uppercase;
       }
@@ -59,8 +59,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           margin: 20px 0;
         }
 
+        .container {
+          padding: 0 60px 100px;
+        }
+
         .splash {
-          padding: 27vw 0 14vw;
+          padding: 21vw 0 16vw;
         }
 
         .splash > h1 {
