--- a/test/index.html
+++ b/test/index.html
@@ -21,8 +21,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <script>
       WCT.loadSuites([
-        'my-view1.html?dom=shady',
-        'my-view1.html?dom=shadow'
+        'code-nasa-app.html?dom=shady',
+        'code-nasa-app.html?dom=shadow'
       ]);
     </script>
   </body>
