--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -48,6 +48,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-size: 24px 24px;
         border: none;
         border-bottom: 1px solid #FFF;
+        border-radius: 0;
         font-size: 16px;
         color: #FFF;
       }
