make background image blend into background colour nicely

--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style include="shared-styles">
       :host {
         display: block;
-        background-color: #050D1A;
+        background-color: #0a121d;
         background-image: url('/images/backgrounds/projects.jpg'),
                           url('/images/backgrounds/projects-bottom.jpg'),
                           linear-gradient(0deg, #323D44, transparent 1300px);
