--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -103,7 +103,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>Non-NASA affiliates:</h2>
         <p>
           We encourage
-          your to clone, fork, modify, break, and improve the code that we've released thus far.
+          you to clone, fork, modify, break, and improve the code that we've released thus far.
           We're still working out the proper methods to take user contributions to our code and
           will provide information on how to do so as it develops.
         </p>
