--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -1,18 +1,5 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
-
-<dom-module id="code-nasa-share">
-  <template strip-whitespace>
+<html><head><meta charset="UTF-8"><link rel="import" href="code-nasa-app.html"></head><body><dom-module id="code-nasa-share">
+  <template strip-whitespace="">
     <style include="shared-styles">
       :host {
         display: block;
@@ -111,9 +98,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </div>
   </template>
 
-  <script>
-    Polymer({
-      is: 'code-nasa-share'
-    });
-  </script>
+  <script>Polymer({is:"code-nasa-share"});</script>
 </dom-module>
+</body></html>
