Make invalid page content accessible [Fixes #55]

--- a/src/code-nasa-invalid.html
+++ b/src/code-nasa-invalid.html
@@ -19,8 +19,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <div class="card">
-      Invalid page. <a href="/#/">Go to homepage</a>
+    <div class="container">
+      <div class="splash">
+        Invalid page. <a href="/#/">Go to homepage</a>
+      </div>
     </div>
   </template>
 
