--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <footer>
       <p>
-        NASA Officials:
-        <a href="mailto:beth.beck@nasa.gov" target="_blank">Beth Beck</a>
-        and
+        NASA Official:
         <a href="mailto:jason.duley@nasa.gov" target="_blank">Jason Duley</a>
       </p>
       <p class="last">
