CATALOG to CODE merge DONE... also changed NASA Official to Brian Thomas

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <footer>
       <p>
         NASA Official:
-        <a href="mailto:jason.duley@nasa.gov" target="_blank">Jason Duley</a>
+        <a href="mailto:brian.a.thomas@nasa.gov" target="_blank">Brian Thomas</a>
       </p>
       <p class="last">
         <a href="http://open.nasa.gov/" target="_blank">
