formatting list items

--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -185,12 +185,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </span> -->
               
               
-              <p class="tags">A.I. generated tags :
+              <p class="tags">A.I. generated tags:&nbsp
                 <template is="dom-repeat" items="[[item.Categories_NLP]]" as="tag">
                   <a href$="/?tag=[[tag]]">#[[tag]]</a>
                 </template>
               </p>
-              <p class="tags">Human generated tags :
+              <p class="tags">Human generated tags:&nbsp
                 <template is="dom-repeat" items="[[item.Categories]]" as="tag">
                   <a href$="/?tag=[[tag]]">#[[tag]]</a>
                 </template>
